--- a/app/src/main/res/layout/add_edit_card_activity.xml
+++ b/app/src/main/res/layout/add_edit_card_activity.xml
@@ -4,7 +4,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              tools:context=".AddCardActivity" android:orientation="vertical" android:gravity="center_horizontal">
+              tools:context=".AddEditCardActivity" android:orientation="vertical" android:gravity="center_horizontal">
     <TextView
             android:layout_height="50dp"
             android:text="Добавить карту"
