--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout android:layout_width="wrap_content" android:background="#EBD2FF"
               android:layout_height="wrap_content" android:orientation="vertical"
               xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_margin="5dp">
+              android:layout_margin="5dp" android:id="@+id/item">
     <TextView
             android:text="магазин"
             android:layout_width="match_parent" android:layout_height="wrap_content"
