added shared storage

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,4 +4,8 @@
             android:id="@+id/action_add"
             android:orderInCategory="1"
             android:title="Добавить" />
+    <item
+            android:id="@+id/action_save"
+            android:orderInCategory="2"
+            android:title="Сохранить в PDF" />
 </menu>
