--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="wrap_content" android:background="#EBD2FF"
-              android:layout_height="wrap_content" android:orientation="vertical"
+              android:layout_height="130dp" android:orientation="vertical"
               xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_margin="5dp" android:id="@+id/item">
+              android:layout_margin="5dp" android:id="@+id/itemlt">
     <TextView
             android:text="магазин"
             android:layout_width="match_parent" android:layout_height="wrap_content"
