--- a/app/src/main/res/layout/show_card.xml
+++ b/app/src/main/res/layout/show_card.xml
@@ -1,83 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".AddEditCardActivity" android:orientation="vertical" android:gravity="center_horizontal">
-    <TextView
-            android:layout_height="50dp"
-            android:text="Ваша карта"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <import type="android.view.View"/>
+        <variable
+                name="card"
+                type="com.example.lsb3.Card" />
+    </data>
+
+    <LinearLayout
             android:layout_width="match_parent"
-            android:id="@+id/header" android:textColor="#FFFFFF" android:background="#673AB7" android:textSize="21sp"
-            android:gravity="center_vertical|center_horizontal" android:paddingLeft="20dp"/>
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:layout_marginTop="20dp"
-                  android:layout_marginBottom="20dp">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:paddingLeft="20dp" android:layout_marginBottom="15dp">
-            <TextView
-                    android:text="Накопительная"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" android:id="@+id/tvType" android:layout_weight="0"
-                    android:textSize="20sp" android:gravity="center_horizontal"
-                    android:textColor="#000000" android:paddingTop="5dp"/>
-            <LinearLayout android:layout_width="242dp" android:layout_height="wrap_content"
-                          android:id="@+id/ltDisc">
-                <TextView
-                        android:text="Cкидка"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/tvDisc"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:textColor="#000000" android:textSize="20sp"
-                        android:paddingLeft="50dp"/>
-                <TextView
-                        android:text="10%"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/tvPr" android:layout_weight="0"
-                        android:gravity="center_horizontal|center_vertical" android:textSize="24sp"
-                        android:layout_marginLeft="40dp"/>
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <ImageView android:layout_width="match_parent"
-                       android:layout_height="match_parent"
-                       android:src="@drawable/nophoto"
-                       android:scaleType="centerCrop" android:id="@+id/shopImage">
-            </ImageView>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:gravity="center">
-            <ImageView android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:src="@drawable/barcode"
-                       android:id="@+id/shtrImage"
-                       android:gravity="center">
-            </ImageView>
-        </LinearLayout>
+            android:layout_height="match_parent"
+            tools:context=".ShowCardActivity"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
         <TextView
-                android:text="1234567891234"
+                android:layout_height="50dp"
+                android:text="@{card.name}"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/tvShtr"
-                android:textColor="#000000" android:textSize="24sp" android:textAlignment="center"
-                android:gravity="center_horizontal|center_vertical"
-                android:letterSpacing="0.2"/>
+                android:id="@+id/header"
+                android:textColor="#FFFFFF"
+                android:background="#673AB7"
+                android:textSize="21sp"
+                android:gravity="center_vertical|center_horizontal"
+                android:paddingLeft="20dp" />
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:layout_marginBottom="15dp">
+
+                <TextView
+                        android:text='@{card.isDisc ? "Дисконтная" : "Накопительная"}'
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:id="@+id/tvType"
+                        android:textSize="20sp"
+                        android:gravity="center_horizontal"
+                        android:textColor="#000000"
+                        android:paddingTop="5dp" />
+
+                <LinearLayout
+                        android:layout_width="242dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/ltDisc"
+                        android:visibility='@{card.isDisc ? View.VISIBLE : View.GONE}'>
+
+                    <TextView
+                            android:text="Скидка"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tvDisc"
+                            android:gravity="center"
+                            android:textColor="#000000"
+                            android:textSize="20sp"
+                            android:paddingLeft="50dp" />
+
+                    <TextView
+                            android:text='@{card.disc + "%"}'
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tvPr"
+                            android:gravity="center"
+                            android:textSize="24sp"
+                            android:layout_marginLeft="40dp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/nophoto"
+                        android:scaleType="centerCrop"
+                        android:id="@+id/shopImage" />
+            </LinearLayout>
+
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+
+                <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/barcode"
+                        android:id="@+id/shtrImage"
+                        android:gravity="center" />
+            </LinearLayout>
+
+            <TextView
+                    android:text='@{card.shtr}'
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvShtr"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:letterSpacing="0.2" />
+        </LinearLayout>
+
+        <Button
+                android:text="Назад"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnBack"
+                app:cornerRadius="15dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp" />
     </LinearLayout>
-    <Button
-            android:text="Назад"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/btnBack" app:cornerRadius="15dp"
-            android:gravity="center|center_horizontal|center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
-    />
-</LinearLayout>
+</layout>
