--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" android:orientation="vertical" android:gravity="center_horizontal"
+        tools:context=".ui.view.MainActivity" android:orientation="vertical" android:gravity="center_horizontal"
         android:background="#FFFDF6FE">
     <TextView
             android:layout_height="50dp"
