--- a/app/src/main/res/layout/add_edit_card_activity.xml
+++ b/app/src/main/res/layout/add_edit_card_activity.xml
@@ -4,6 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View"/>
         <variable
                 name="card"
                 type="com.example.lsb3.Card" />
@@ -93,12 +94,14 @@
                         android:layout_height="wrap_content"
                         android:text="Накопительная"
                         android:textSize="14sp"
-                        android:textColor="#000000" />
+                        android:textColor="#000000"
+                        android:checked="@{!card.isDisc}"/>
 
                 <LinearLayout
                         android:id="@+id/ltDisc"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:visibility='@{card.isDisc ? View.VISIBLE : View.GONE}'>
 
                     <TextView
                             android:text="Размер скидки"
