--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -16,6 +16,14 @@
             android:background="#EBD2FF"
             android:orientation="vertical">
 
+        <ImageView
+                android:id="@+id/iVShop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:visibility='@{card.shopImg != null ? View.VISIBLE : View.GONE}'
+                />
+
         <TextView
                 android:id="@+id/tVNameAns"
                 android:layout_width="match_parent"
@@ -23,7 +31,9 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@{card.name}"
                 android:textColor="#000000"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:visibility='@{card.shopImg == null ? View.VISIBLE : View.GONE}'
+        />
 
         <LinearLayout
                 android:layout_width="match_parent"
