--- a/app/src/main/res/layout/fragment_add_edit_card.xml
+++ b/app/src/main/res/layout/fragment_add_edit_card.xml
@@ -143,6 +143,14 @@
                     android:layout_height="match_parent" />
         </LinearLayout>
 
+        <ImageView
+                android:id="@+id/iVSelectedImage"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:layout_marginTop="16dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/nophoto" />
+
         <Button
                 android:id="@+id/btnBack"
                 android:layout_width="wrap_content"
